[gd_scene load_steps=4 format=3 uid="uid://de1gp352vgc71"]

[ext_resource type="FontFile" uid="uid://cyo4r1idgb4cp" path="res://assets/fonts/Kenney Thick.ttf" id="1_fvlqr"]
[ext_resource type="Script" path="res://hud/game_over_screen.gd" id="1_s60wp"]

[sub_resource type="LabelSettings" id="LabelSettings_7vrvq"]
font = ExtResource("1_fvlqr")
font_size = 48
font_color = Color(0.670588, 0, 0, 1)
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s60wp")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(480, 270)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.0
offset_top = -2.0
offset_right = 204.0
offset_bottom = 92.0
grow_horizontal = 2
theme_override_constants/margin_top = 40

[node name="Label" type="Label" parent="Panel/MarginContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_7vrvq")

[node name="MarginContainer2" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer2"]
layout_mode = 2

[node name="TryAgainButton" type="Button" parent="Panel/MarginContainer2/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../MainMenuButton")
focus_neighbor_right = NodePath("../MainMenuButton")
theme_override_colors/font_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_fvlqr")
theme_override_font_sizes/font_size = 24
text = "Try Again"

[node name="MainMenuButton" type="Button" parent="Panel/MarginContainer2/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../TryAgainButton")
focus_neighbor_right = NodePath("../TryAgainButton")
theme_override_colors/font_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.670588, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("1_fvlqr")
theme_override_font_sizes/font_size = 24
text = "Main Menu"

[connection signal="pressed" from="Panel/MarginContainer2/HBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer2/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
